// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete should match the snapshot 1`] = `
<Autocomplete__StyledAutocomplete
  onBlur={[Function]}
  onKeyDown={[Function]}
>
  <Input
    handleChange={[Function]}
    handleFocus={[Function]}
    placeholder=""
    value=""
  />
  <Select
    handleKeyPress={[Function]}
    onClick={[Function]}
    selected=""
    suggestions={Array []}
    visible={false}
  />
</Autocomplete__StyledAutocomplete>
`;

exports[`Autocomplete should match the snapshot with suggestions 1`] = `
<Autocomplete__StyledAutocomplete
  onBlur={[Function]}
  onKeyDown={[Function]}
>
  <Input
    handleChange={[Function]}
    handleFocus={[Function]}
    placeholder=""
    value=""
  />
  <Select
    handleKeyPress={[Function]}
    onClick={[Function]}
    selected="Value"
    suggestions={
      Array [
        Object {
          "label": "Label",
          "value": "Value",
        },
      ]
    }
    visible={false}
  />
</Autocomplete__StyledAutocomplete>
`;
